Fixed a sub-pixel gap problem by right-aligning stuff on the left side when rendering three-column layouts where the gaps occurred.

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -87,7 +87,7 @@ img { border: 0; }
     clear: both;
     text-align: center;
     font-size: 2.4em;
-    line-height: 2em;
+    line-height: 1.6em;
     ul {
       margin: 0px;
       padding: 0px;
@@ -96,8 +96,8 @@ img { border: 0; }
         font-weight: bold;
         list-style-type: none;
         display: inline;
-        padding-left: 0.5ex;
-        padding-right: 0.5ex;
+        padding-left: 0.3ex;
+        padding-right: 0.3ex;
       }
     }
   }
@@ -352,9 +352,11 @@ img { border: 0; }
   .rack {
     .section {
       width: 100%;
-      .mount + .mount { margin-left: -1px; }
       .mount.square {
         width: 66.67%;
+        .panel {
+          float: right;
+        }
         .panel.square, .panel.portrait {
           width: 50%;
         }
